--- a/develop/src/engineer.html
+++ b/develop/src/engineer.html
@@ -7,7 +7,8 @@
     <ul class="list-group">
       <li class="list-group-item">ID: {{ id }}</li>
       <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-      <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
+      <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank"
+          rel="noopener noreferrer">{{ github }}</a></li>
     </ul>
   </div>
 </div>
