--- a/develop/src/engineer.html
+++ b/develop/src/engineer.html
@@ -1,3 +1,4 @@
+<!-- HTML template for engineer class, used to display engineer card -->
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">{{ name }}</h2>
