--- a/develop/src/intern.html
+++ b/develop/src/intern.html
@@ -1,3 +1,4 @@
+<!-- HTML template for intern class, used to display intern card -->
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">{{ name }}</h2>
