--- a/develop/src/manager.html
+++ b/develop/src/manager.html
@@ -1,3 +1,4 @@
+<!-- HTML template for manager class, used to display manager card -->
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">{{ name }}</h2>
